# gmxFlow

./: .gitignore  DEVELOPER.md  INSTALL_GUIDE.md  LICENSE  README.md  WORKSHOP_KEYS_2026.txt  analysis.py  build.sh  config.py  gmxflow.py  install.sh  license_check.py  pipeline.py  pyproject.toml  requirements.txt  settings.py  uninstall.sh  update.sh  utils.py  visualization.py
gmxflow/: __init__.py  config.py  pipeline.py
