[project]
name = "gmxflow"
version = "2026.0.1"
description = "Terminal UI for GROMACS molecular dynamics simulation pipelines"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "gmxFlow Development Team"}
]
keywords = ["gromacs", "molecular-dynamics", "simulation", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.0.0"]

[project.scripts]
gmflo = "gmxflow.gmxflow:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
